5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1644_869.log
== TEST (2019-04-14 17:55:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (desconto % 5 >=200):
	valor = "conceder desconto"

else:
	valor = "nao conceder desconto"

#impressao do valor
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (desconto % 5 >=200):
NameError: name 'desconto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:55:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
desconto=float(input("Qual o valor da compra?: "))

#condicao
if (desconto % 5 >=200):
	valor = "conceder desconto"

else:
	valor = "nao conceder desconto"

#impressao do valor
print(desconto)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:56:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
desconto=float(input("Qual o valor da compra?: "))

#condicao
if (desconto % 5 >=200):
	valor = "conceder desconto"

else:
	valor = "nao conceder desconto"

#impressao do valor
print(desconto)
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:56:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
desconto=float(input("Qual o valor da compra?: "))

#condicao
if (desconto % 5 >=200):
	desconto = "conceder desconto"

else:
	desconto = "nao conceder desconto"

#impressao do valor
print(desconto)
-- OUTPUT:
nao conceder desconto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:58:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
desconto=float(input("Qual o valor da compra?: "))

#condicao
if (desconto ((5/100)*desconto >= 200):
	desconto = "conceder desconto"

else:
	desconto = "nao conceder desconto"

#impressao do valor
print(desconto)
-- ERROR:
File "XXXX", line 9
    if (desconto ((5/100)*desconto >= 200):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:00:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))
desconto = ((5/100)*valor)

#condicao
if (desconto >= 200):
	desconto = "conceder desconto"

else:
	desconto = "nao conceder desconto"

#impressao do valor
print(desconto)
-- OUTPUT:
nao conceder desconto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:39:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	

else:
	desconto = "nao conceder desconto"

#impressao do valor
print(desconto)
-- OUTPUT:
conceder desconto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:41:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = (valor * (5/100)) - valor

else:
	desconto = "nao conceder desconto"

#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
-190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:41:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"

#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:42:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:43:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:43:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:43:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(desconto)
print(var)
-- EXECUTION TIME:
0.205233
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
conceder desconto
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
conceder desconto
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:43:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(var)
-- EXECUTION TIME:
0.223893
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:43:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(var)
-- EXECUTION TIME:
0.127095
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:49:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:52:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	desconto = "conceder desconto"
	var = valor - (valor * (5/100))

else:
	desconto = "nao conceder desconto"
	var = valor
	
#impressao do valor
print(desconto)
print(var)
-- OUTPUT:
conceder desconto
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:53:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	
	var = valor - (valor * (5/100))

else:
	
	var = valor
	
#impressao do valor

print(var)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:53:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	
	var = valor - (valor * (5/100))

else:
	
	var = valor
	
#impressao do valor

print(var)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:53:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	
	var = valor - (valor * (5/100))

else:
	
	var = valor
	
#impressao do valor

print(var)
-- EXECUTION TIME:
0.157937
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:54:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
#impressao do valor
print(var)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:54:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
#impressao do valor
print(var)
-- EXECUTION TIME:
0.21585
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:55:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))


#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
#impressao do valor
print(var)
-- EXECUTION TIME:
0.18632
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:58:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(var)
-- EXECUTION TIME:
0.16189
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:58:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(var)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:58:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(var)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:59:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(round(var, 2)
-- EXECUTION TIME:
0.19113
-- ERROR:
  File "/home/codebench/codes/1644/869/main.py", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:00:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(round(var, 2)
-- ERROR:
File "XXXX", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 11:00:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(round(var, 2)
-- ERROR:
File "XXXX", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 11:00:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

#entrada do valor
valor=float(input("Qual o valor da compra?: "))

#condicao
if (valor >= 200):
	var = valor - (valor * (5/100))
else:
	var = valor
	
#impressao do valor
print(round(var, 2))
-- EXECUTION TIME:
0.193243
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
